opam-version: "2.0"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "./configure" "--api" ]
  [ make "install-exe" ]
]

install: [
  [ "./configure" ]
  [ make "install" ]
]

remove: [
  [ "./configure" ]
  [ make "uninstall" ]
]

depends: [
  "camlp5" { build }
  "cppo" { build }
  "dune" { build >= "1.1.1" }
  "ocaml" { >= "4.05" }
]
