(library
 (name dummy_gwdb)
 (libraries geneweb.def)
 (implements geneweb.gwdb.mli)
 (modules gwdb_driver)
)

(executable
  (name test)
  (libraries geneweb.sosa-zarith dummy_gwdb geneweb.wserver geneweb oUnit)
  (modules test test_place test_sosa test_utils)
)

(alias (name runtest) (action (run ./test.exe) ) )
